# wikipedia_recommending_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml  similarities_mathing.py
docs/: references.md
src/: main.py
src/analysis/: explainability.py  query_size_analysis.py  statistics.py  text_analysis.py
src/data/: wikipedia_articles.parquet
src/engine/: explainability.py  query_size_analysis.py  similarity_engine.py  statistics.py  strategy.py
src/processing/: text_processor.py
src/spider/: items.py  pipelines.py  settings.py  wikipedia_spider.py
src/utils/: preprocessing.py  visualization.py
src/wiki_recommender/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_setup.py
src/wiki_recommender/analysis/: __init__.py  corpus_stats.py  explain.py  model_stats.py  reporting.py
src/wiki_recommender/engine/: __init__.py  similarity.py  strategies.py
src/wiki_recommender/nlp/: __init__.py  bootstrap.py  text_processor.py
src/wiki_recommender/scrape/: __init__.py  items.py  pipelines.py  runner.py  settings.py  spider.py
src/wiki_recommender/viz/: __init__.py  plots.py
