[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-recommender"
version = "0.2.0"
description = "Content-based recommender system for Wikipedia articles: BFS crawl, TF-IDF, cosine similarity, explainable term contributions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jakub Jęsiek" },
    { name = "Jakub Radziejewski" },
]
keywords = ["wikipedia", "recommender", "tf-idf", "content-based", "scrapy", "nlp", "information-retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "scrapy>=2.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "nltk>=3.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "typer>=0.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.scripts]
wikirec = "wiki_recommender.cli:app"

[project.urls]
Repository = "https://github.com/jakubradziejewski/wikipedia_recommending_system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wiki_recommender = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length governed by black
    "B008",   # Typer relies on function-default-call for option metadata
]

[tool.ruff.lint.per-file-ignores]
"src/wiki_recommender/scrape/spider.py" = ["B902"]
